//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "google/protobuf/struct.proto";
import "dxos/keys.proto";

package dxos.mesh.swarm;

/**
 * Use for:
 * - Initial peer discovery (initiate session id between two peers).
 * - RTC negotiation (SDP offer/answer and ICE).
 */
message SwarmMessage {
  /// Swarm identifier.
  string swarm_key = 1;
  /// Unique connection identifier.
  string session_id = 2;
  /// Message payload.
  MessageData data = 3;
  /// Unique message identifier. Used for ACK and matching Answers to Offers.
  string message_id = 4;
}

message MessageData {
  oneof payload {
    Offer offer = 1;
    Answer answer = 2;

    /**
     * @deprecated Use SignalBatch instead.
     */
    Signal signal = 3;
    SignalBatch signal_batch = 4;
  }
}

message Offer {
}

message Answer {
  bool accept = 1;
  /// MessageId of the Offer being answered.
  optional string offer_message_id = 2;
}

//
// RTC messages.
//

message Signal {
  google.protobuf.Struct payload = 1;
}

message SignalBatch {
  repeated Signal signals = 1;
}
